--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
   "name": "contract-linter",
-  "version": "1.0.0",
-  "description": "Eslint but for legal contracts",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "license": "ISC",
-  "author": "",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/office-js": "^1.0.560",
+    "@types/office-runtime": "^1.0.35",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "office-addin-cli": "^2.0.6",
+    "office-addin-dev-certs": "^2.0.6",
+    "office-js": "^0.1.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-office-addin": "^2.1.0"
   }
 }
