--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@assistant-ui/react": "^0.11.47",
+    "@assistant-ui/react-markdown": "^0.11.6",
+    "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -22,10 +31,13 @@
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "tslib": "^2.8.1",
     "uuid": "^13.0.0",
-    "wink-nlp": "^2.4.0"
+    "wink-nlp": "^2.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
